--- a/tests/notebooks/process_walkthrough/wt_entity.Rmd
+++ b/tests/notebooks/process_walkthrough/wt_entity.Rmd
@@ -45,7 +45,7 @@ print(pdf_paths)
 # Preceding Steps
 ## Process Text
 ```{r}
-n = 17
+n = 1
 input_path <- pdf_paths[n]
 input_path
 
@@ -56,14 +56,14 @@ text_processed.v <- process_text(input_path)
 
 ## Extract Hypothesis
 ```{r}
-hypothesis_df <- hypothesis_extraction(text_processed.v, apply_model = FALSE)
+hypothesis.df <- hypothesis_extraction(text_processed.v, apply_model = FALSE)
 
-# hypothesis_df
+hypothesis.df
 ```
 
 # Output Table - For Reference
 ```{r}
-CausalityExtraction(input_path)
+# CausalityExtraction(input_path)
 ```
 
 
@@ -72,7 +72,7 @@ CausalityExtraction(input_path)
 The overall process works on a vector of hypothesis statements, but executes on a individual level, which is then vectorized. To see the individual steps, we will select a single hypothesis and analyze.
 ```{r}
 row_num <- 1
-hypothesis <- hypothesis_df %>% slice(row_num) %>% pull(hypothesis)
+hypothesis <- hypothesis.df %>% slice(row_num) %>% pull(hypothesis)
 hypothesis
 ```
 ## Generate entity class predictions
@@ -113,5 +113,21 @@ index_entities
 ## Convert Indexes to Text
 ```{r}
 entity_text_output <- index_to_entity(hypothesis, index_entities)
+entity_text_output
+
+```
+### Remove Hypothesis Tags
+```{r}
+entity_text_output <- gsub(
+  pattern     = "hypo (.*?):\\s*",
+  replacement = "",
+  x           =  entity_text_output
+  )
 as.data.frame(entity_text_output)
+```
+
+
+## Final Function
+```{r}
+entity_extraction(hypothesis.df)
 ```
