--- a/tests/notebooks/process_walkthrough/wt_entity.Rmd
+++ b/tests/notebooks/process_walkthrough/wt_entity.Rmd
@@ -45,27 +45,24 @@ print(pdf_paths)
 # Preceding Steps
 ## Process Text
 ```{r}
-n = 1
-input_path <- pdf_paths[n]
+m = 1
+n = 5
+input_path <- pdf_paths[m:(m+n)]
 input_path
 
-text_processed.v <- process_text(input_path)
-
+text_raw <- pdf_to_text(input_path)
+text_raw_sample <- text_raw[1]
+text_processed <- process_text(text_raw_sample)
+# text_raw
 # inspect(text_processed.v, m = 180)
 ```
 
 ## Extract Hypothesis
 ```{r}
-hypothesis.df <- hypothesis_extraction(text_processed.v, apply_model = FALSE)
+hypothesis.df <- hypothesis_extraction(text_processed, apply_model = FALSE)
 
 hypothesis.df
 ```
-
-# Output Table - For Reference
-```{r}
-# CausalityExtraction(input_path)
-```
-
 
 # Extract Entities
 ## Select Hypothesis Input
@@ -95,6 +92,7 @@ if (
 }
 both_entity_present
 ```
+
 ## Trim Overlapping Entities
 ```{r}
 if (both_entity_present) {
@@ -116,16 +114,6 @@ entity_text_output <- index_to_entity(hypothesis, index_entities)
 entity_text_output
 
 ```
-### Remove Hypothesis Tags
-```{r}
-entity_text_output <- gsub(
-  pattern     = "hypo (.*?):\\s*",
-  replacement = "",
-  x           =  entity_text_output
-  )
-as.data.frame(entity_text_output)
-```
-
 
 ## Final Function
 ```{r}
